; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_st_bind.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_st_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }
%struct.retro_keybind = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i8*, i64)* @setting_get_string_representation_st_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setting_get_string_representation_st_bind(%struct.TYPE_7__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.retro_keybind*, align 8
  %9 = alloca %struct.retro_keybind*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  store %struct.retro_keybind* null, %struct.retro_keybind** %8, align 8
  store %struct.retro_keybind* null, %struct.retro_keybind** %9, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %11 = icmp ne %struct.TYPE_7__* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  br label %34

13:                                               ; preds = %3
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  store i32 %16, i32* %7, align 4
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to %struct.retro_keybind*
  store %struct.retro_keybind* %22, %struct.retro_keybind** %8, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.retro_keybind*, %struct.retro_keybind** %8, align 8
  %25 = getelementptr inbounds %struct.retro_keybind, %struct.retro_keybind* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @input_config_get_bind_auto(i32 %23, i32 %26)
  %28 = inttoptr i64 %27 to %struct.retro_keybind*
  store %struct.retro_keybind* %28, %struct.retro_keybind** %9, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = load %struct.retro_keybind*, %struct.retro_keybind** %8, align 8
  %31 = load %struct.retro_keybind*, %struct.retro_keybind** %9, align 8
  %32 = load i64, i64* %6, align 8
  %33 = call i32 @input_config_get_bind_string(i8* %29, %struct.retro_keybind* %30, %struct.retro_keybind* %31, i64 %32)
  br label %34

34:                                               ; preds = %13, %12
  ret void
}

declare dso_local i64 @input_config_get_bind_auto(i32, i32) #1

declare dso_local i32 @input_config_get_bind_string(i8*, %struct.retro_keybind*, %struct.retro_keybind*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
